--- a/boardStudy01/.project
+++ b/boardStudy01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>boardStudy</name>
+	<name>boardStudy01</name>
 	<comment></comment>
 	<projects>
 	</projects>
